--- a/templates/cv/cv.html
+++ b/templates/cv/cv.html
@@ -51,199 +51,220 @@
   </div>
 </section><br>
 
-<section>
-  <h2>Références</h2>
-  <color-jade>Matthieu Compin</color-jade><br>
-  Expert Technique Espace au Commandement de l'Espace (CdE)<br><br>
-  Téléphone : 06 89 17 16 44
-</section><br>
+<div class="collapsible-block">
+  <h3 class="collapsible-toggle" onclick="toggleSection('references', this)">
+    Références
+    <span class="arrow-icon">▼</span>
+  </h3>
+  <div id="references" class="collapsible-content">
+    <section>
+      <color-jade>Matthieu Compin</color-jade><br>
+      Expert Technique Espace au Commandement de l'Espace (CdE<br><br>
+      Téléphone : 06 89 17 16 44
+    </section>
+  </div>
+</div><br>
 
-<section class="experiences">
-  <h2>Expériences professionnelles</h2>
-  <ul>
-    <li>
-      <important-text>Data Scientist – Commandement de l'Espace</important-text><br>
-      (oct. 2023 - mars 2025, Toulouse, Occitanie, France)<br>
-      Alternance<br><br>
-      Compétences : Science des données · Analyse des données<br><br> 
+<div class="collapsible-block">
+  <h3 class="collapsible-toggle" onclick="toggleSection('experiences', this)">
+    Expériences professionnelles
+    <span class="arrow-icon">▼</span>
+  </h3>
+  <div id="experiences" class="collapsible-content">
+    <section class="experiences">
       <ul>
         <li>
-          Création et implémentation de base de données : JMerise, PostgreSQL, MongoDB. <br>
-          Récupération des données d’intérêt et injection dans la base via Python (Airflow, requêtes API, scraping avec Selenium).
+          <important-text>Data Scientist – Commandement de l'Espace</important-text><br>
+          (oct. 2023 - mars 2025, Toulouse, Occitanie, France)<br>
+          Alternance<br><br>
+          Compétences : Science des données · Analyse des données<br><br> 
+          <ul>
+            <li>
+              Création et implémentation de base de données : JMerise, PostgreSQL, MongoDB. <br>
+              Récupération des données d’intérêt et injection dans la base via Python (Airflow, requêtes API, scraping avec Selenium).
+            </li>
+            <li>
+              Tests et évaluations de modèles : Évaluation des performances de différents modèles de détection et de classification sur les manoeuvres orbitales afin d'améliorer leur suivi. Utilisation de Python (Random Forest, Deep Neural Network).
+            </li>
+            <li>
+              Modélisation prédictive : Réalisation d’un modèle pour prédire les lieux de retombées atmosphériques à risques en se basant sur Python (Régression Linéaire).
+            </li>
+            <li>
+              Environnement HPC : Travail sur la partie bac à sable d’un HPC – Linux (Alma &amp; Debian).
+            </li>
+          </ul>
         </li>
         <li>
-          Tests et évaluations de modèles : Évaluation des performances de différents modèles de détection et de classification sur les manoeuvres orbitales afin d'améliorer leur suivi. Utilisation de Python (Random Forest, Deep Neural Network).
+          <important-text>Contrôleuse de gestion – Airbus Defence and Space</important-text><br>
+          (mai 2022 - mai 2023, Toulouse, Occitanie, France)<br><br>
+          Compétences : Gestion financière · Indicateurs clés de performance · Business Analysis<br><br> 
+          <ul>
+            <li>
+              Réalisation mensuelle du suivi des marges et contrôle des revenus
+            </li>
+            <li>
+              Explication des écarts entre le budget et les coûts réels
+            </li>
+            <li>
+              Présentation du budget pour les années futures
+            </li>
+          </ul>
         </li>
         <li>
-          Modélisation prédictive : Réalisation d’un modèle pour prédire les lieux de retombées atmosphériques à risques en se basant sur Python (Régression Linéaire).
+          <important-text>Analyste financière – Amazon</important-text><br> 
+          (août 2020 - mai 2021, Bratislava, Slovaquie)<br><br>
+          Compétences : Gestion financière · Client Relations · Business Analysis <br><br> 
+          <ul>
+            <li>
+              Résolution des problèmes en coopération avec les fournisseurs d'Amazon pour faciliter les paiements
+            </li>
+            <li>
+              Coopération avec les services internes pour garantir des paiements rapides et corrects
+            </li> 
+            <li>
+              Mise en œuvre d'améliorations de processus pour une résolution plus rapide des problèmes transactionnels
+            </li> 
+          </ul>
         </li>
         <li>
-          Environnement HPC : Travail sur la partie bac à sable d’un HPC – Linux (Alma &amp; Debian).
+          <important-text>Ingénieure Commercial – Bertin Technologies</important-text><br>
+          (oct. 2018 - nov. 2019, Singapour)<br><br>
+          Compétences : Client Relations · Secteur de la biotechnologie · Indicateurs clés de performance · Negotiation · Business Analysis<br><br> 
+          Dans l'entité dédiée aux équipements pharmaceutiques :<br>
+          <ul>
+            <li>
+              Identification de nouveaux prospects et partenaires commerciaux (B2B et B2C),
+            </li>
+            <li>
+              Analyse financière et commerciale des partenaires potentiels
+            </li>
+            <li>
+              Communication et suivi pour conclure de nouveaux contrats
+            </li>
+            <li>
+              Prise de contact auprès des clients potentiels pour déterminer leurs besoins et présentation de propositions technico-commerciales
+            </li>
+            <li>
+              Gestion et développement du réseau de distributeurs
+            </li>
+            <li>
+              Réalisation de reportings détaillés.
+            </li>
+          </ul>
+          Trois nouveaux contrats de distribution ont été conclus, générant une augmentation des ventes de 30% sur la zone APAC.<br>
+
+        </li>
+        <li>
+          <important-text>Consultante Junior – SunTseu</important-text> <br>
+          (sept. 2017 - sept. 2018, Châtillon, Île-de-France)<br>
+          Compétences : Collecte des exigences · Relations Client  · CRM : Salesforce et Veeva<br> <br> 
+          Au sein de la Practice Life Sciences : <br>
+          <ul>
+            <li>
+              Recueil des besoins métiers en vue d’un changement de logiciel CRM
+            </li>
+            <li>
+              Analyse et modélisation des processus métiers
+            </li>
+            <li>
+              Rédaction des cahiers des charges et spécifications fonctionnelles
+            </li>
+            <li>
+              Paramétrages et tests en Sandbox pour préparer la mise en production,
+            </li>
+            <li>
+              Accompagnement au changement post-déploiement
+            </li>
+          </ul>
+          <br>
         </li>
       </ul>
-    </li>
-    <li>
-      <important-text>Contrôleuse de gestion – Airbus Defence and Space</important-text><br>
-      (mai 2022 - mai 2023, Toulouse, Occitanie, France)<br><br>
-      Compétences : Gestion financière · Indicateurs clés de performance · Business Analysis<br><br> 
+    </section>
+  </div>
+</div>
+
+<div class="collapsible-block">
+  <h3 class="collapsible-toggle" onclick="toggleSection('formations', this)">
+    Formations
+    <span class="arrow-icon">▼</span>
+  </h3>
+  <div id="formations" class="collapsible-content">
+    <section class="formations">
       <ul>
         <li>
-          Réalisation mensuelle du suivi des marges et contrôle des revenus
+          <important-text>Master Data Science – OpenClassrooms &amp; CentraleSupélec</important-text><br>(oct. 2023 - mars 2025)<br><br>
+          Compétences : Science des données · Analyse des données · Analyse statistique<br><br> 
+
+          Langages &amp; frameworks :<br>
+          Python, SQL, NoSQL, Git, MLFlow<br><br>
+
+          Machine &amp; Deep Learning :<br>
+          XGBoost, SVM, CNN, NLP<br><br>
+
+          Big Data &amp; Cloud<br>
+          PySpark, Hadoop, AWS<br><br>
+
+          MLOps &amp; Déploiement :<br>
+          CI/CD, API<br><br>
+
+          Cours :<br>
+          Collecter, explorer, préparer et analyser des données<br>
+          Élaborer des modèles prédictifs<br>
+          Déployer des modèles de données<br>
+          Communiquer les résultats grâce à des visualisations<br>
+          Participer à l'organisation et au pilotage d'un projet data science &amp; IA<br><br>
+
+          Projets :<br>
+          Analyse de données éducatives<br>
+          Préparation des données pour un organisme de santé publique<br> 
+          Prédiction de la consommation énergétique des bâtiments<br>
+          Segmentation client pour un site d'e-commerce<br>
+          Classification automatique des biens de consommation basée sur leurs descriptions ou sur leurs photos<br>
+          Développement d’un modèle de scoring financier<br> 
+          Création d’un dashboard interactif<br>
+          Traitement Big Data sur le Cloud<br> 
+          Cadrage d’un projet IA
         </li>
         <li>
-          Explication des écarts entre le budget et les coûts réels
+          <important-text>Bootcamp Analyse de données – DataBird</important-text> <br>(févr. 2023 - mai 2023)<br><br>
+          Compétences : GitHub, Rapports et analyses, Statistiques, ETL, Bases de données, Python, SQL, Tableau, Visualisation de données<br><br> 
+          Activités et associations :<br>
+          Mise en place d'un projet d'analyse de données en collaboration avec une entreprise pour fournir une analyse approfondie des ventes <br>
+          Cours avancés sur l'extraction et la manipulation de données avec SQL<br>
+          Cours avancés sur Python (études statistiques avec Pandas et NumPy, requêtage d'API REST, scraping)<br> 
+          Visualisation avec Tableau
         </li>
         <li>
-          Présentation du budget pour les années futures
+          <important-text>Dual MSc&amp;MA : Finance and Investments – London School of Business and Finance (LSBF)</important-text><br> (oct. 2019 - mars 2022)<br><br>
+          Compétences : Analyse financière · Indicateurs clés de performances <br><br> 
+          Cours :<br>
+          Analyse commerciale et financière<br>
+          Finance d'entreprise avancée
+          Finance quantitative et marchés financiers<br> 
+          Fusion, acquisition et capital privé
+        </li>
+        <li>
+          <important-text>Master of Business Administration - MBA, Management des biotechnologies – Ionis-STM, école de double compétence</important-text> <br>(2015 - 2017)<br><br>
+          Compétences : Statistiques · Secteur de la biotechnologie · Indicateurs clés de performances · Biostatistiques <br><br> 
+          Cours :<br>
+          Business Administration<br>
+          Biostatistiques<br>
+          Conduite du changement<br>
+          Finance d'entreprise<br>
+          Gestion de projet dans l'industrie pharmaceutique<br>
+          Marketing stratégique et opérationnel des bioproduits<br>
+          Immunotechnologies
+        </li>
+        <li>
+          <important-text>Licence de biologie humaine et biotechnologies, Biologie – Aix-Marseille Université</important-text> <br>(sept. 2012 - mai 2015)<br><br>
+          Compétences : Secteur de la biotechnologie · Biostatistiques<br><br> 
+          Étude des méthodes de genèse de nouvelles lignées cellulaires et des manipulations génétiques.<br>
         </li>
       </ul>
-    </li>
-    <li>
-      <important-text>Analyste financière – Amazon</important-text><br> 
-      (août 2020 - mai 2021, Bratislava, Slovaquie)<br><br>
-      Compétences : Gestion financière · Client Relations · Business Analysis <br><br> 
-      <ul>
-        <li>
-          Résolution des problèmes en coopération avec les fournisseurs d'Amazon pour faciliter les paiements
-        </li>
-        <li>
-          Coopération avec les services internes pour garantir des paiements rapides et corrects
-        </li> 
-        <li>
-          Mise en œuvre d'améliorations de processus pour une résolution plus rapide des problèmes transactionnels
-        </li> 
-      </ul>
-    </li>
-    <li>
-      <important-text>Ingénieure Commercial – Bertin Technologies</important-text><br>
-      (oct. 2018 - nov. 2019, Singapour)<br><br>
-      Compétences : Client Relations · Secteur de la biotechnologie · Indicateurs clés de performance · Negotiation · Business Analysis<br><br> 
-      Dans l'entité dédiée aux équipements pharmaceutiques :<br>
-      <ul>
-        <li>
-          Identification de nouveaux prospects et partenaires commerciaux (B2B et B2C),
-        </li>
-        <li>
-          Analyse financière et commerciale des partenaires potentiels
-        </li>
-        <li>
-          Communication et suivi pour conclure de nouveaux contrats
-        </li>
-        <li>
-          Prise de contact auprès des clients potentiels pour déterminer leurs besoins et présentation de propositions technico-commerciales
-        </li>
-        <li>
-          Gestion et développement du réseau de distributeurs
-        </li>
-        <li>
-          Réalisation de reportings détaillés.
-        </li>
-      </ul>
-      Trois nouveaux contrats de distribution ont été conclus, générant une augmentation des ventes de 30% sur la zone APAC.<br>
+    </section>
+  </div>
+</div>
 
-    </li>
-    <li>
-      <important-text>Consultante Junior – SunTseu</important-text> <br>
-      (sept. 2017 - sept. 2018, Châtillon, Île-de-France)<br>
-      Compétences : Collecte des exigences · Relations Client  · CRM : Salesforce et Veeva<br> <br> 
-      Au sein de la Practice Life Sciences : <br>
-      <ul>
-        <li>
-          Recueil des besoins métiers en vue d’un changement de logiciel CRM
-        </li>
-        <li>
-          Analyse et modélisation des processus métiers
-        </li>
-        <li>
-          Rédaction des cahiers des charges et spécifications fonctionnelles
-        </li>
-        <li>
-          Paramétrages et tests en Sandbox pour préparer la mise en production,
-        </li>
-        <li>
-          Accompagnement au changement post-déploiement
-        </li>
-      </ul>
-      <br>
-
-    </li>
-  </ul>
-</section>
-
-<section class="formations">
-  <h2>Formations</h2>
-  <ul>
-    <li>
-      <important-text>Master Data Science – OpenClassrooms &amp; CentraleSupélec</important-text><br>(oct. 2023 - mars 2025)<br><br>
-      Compétences : Science des données · Analyse des données · Analyse statistique<br><br> 
-
-      Langages &amp; frameworks :<br>
-      Python, SQL, NoSQL, Git, MLFlow<br><br>
-
-      Machine &amp; Deep Learning :<br>
-      XGBoost, SVM, CNN, NLP<br><br>
-
-      Big Data &amp; Cloud<br>
-      PySpark, Hadoop, AWS<br><br>
-
-      MLOps &amp; Déploiement :<br>
-      CI/CD, API<br><br>
-
-      Cours :<br>
-      Collecter, explorer, préparer et analyser des données<br>
-      Élaborer des modèles prédictifs<br>
-      Déployer des modèles de données<br>
-      Communiquer les résultats grâce à des visualisations<br>
-      Participer à l'organisation et au pilotage d'un projet data science &amp; IA<br><br>
-
-      Projets :<br>
-      Analyse de données éducatives<br>
-      Préparation des données pour un organisme de santé publique<br> 
-      Prédiction de la consommation énergétique des bâtiments<br>
-      Segmentation client pour un site d'e-commerce<br>
-      Classification automatique des biens de consommation basée sur leurs descriptions ou sur leurs photos<br>
-      Développement d’un modèle de scoring financier<br> 
-      Création d’un dashboard interactif<br>
-      Traitement Big Data sur le Cloud<br> 
-      Cadrage d’un projet IA
-    </li>
-    <li>
-      <important-text>Bootcamp Analyse de données – DataBird</important-text> <br>(févr. 2023 - mai 2023)<br><br>
-      Compétences : GitHub, Rapports et analyses, Statistiques, ETL, Bases de données, Python, SQL, Tableau, Visualisation de données<br><br> 
-      Activités et associations :<br>
-      Mise en place d'un projet d'analyse de données en collaboration avec une entreprise pour fournir une analyse approfondie des ventes <br>
-      Cours avancés sur l'extraction et la manipulation de données avec SQL<br>
-      Cours avancés sur Python (études statistiques avec Pandas et NumPy, requêtage d'API REST, scraping)<br> 
-      Visualisation avec Tableau
-    </li>
-    <li>
-      <important-text>Dual MSc&amp;MA : Finance and Investments – London School of Business and Finance (LSBF)</important-text><br> (oct. 2019 - mars 2022)<br><br>
-      Compétences : Analyse financière · Indicateurs clés de performances <br><br> 
-      Cours :<br>
-      Analyse commerciale et financière<br>
-      Finance d'entreprise avancée
-      Finance quantitative et marchés financiers<br> 
-      Fusion, acquisition et capital privé
-    </li>
-    <li>
-      <important-text>Master of Business Administration - MBA, Management des biotechnologies – Ionis-STM, école de double compétence</important-text> <br>(2015 - 2017)<br><br>
-      Compétences : Statistiques · Secteur de la biotechnologie · Indicateurs clés de performances · Biostatistiques <br><br> 
-      Cours :<br>
-      Business Administration<br>
-      Biostatistiques<br>
-      Conduite du changement<br>
-      Finance d'entreprise<br>
-      Gestion de projet dans l'industrie pharmaceutique<br>
-      Marketing stratégique et opérationnel des bioproduits<br>
-      Immunotechnologies
-    </li>
-    <li>
-      <important-text>Licence de biologie humaine et biotechnologies, Biologie – Aix-Marseille Université</important-text> <br>(sept. 2012 - mai 2015)<br><br>
-      Compétences : Secteur de la biotechnologie · Biostatistiques<br><br> 
-      Étude des méthodes de genèse de nouvelles lignées cellulaires et des manipulations génétiques.<br>
-    </li>
-  </ul>
-</section>
 <a href="/" class="btn">Retour à l'accueil</a>
 
 <!-- JavaScript for toggling -->
@@ -259,6 +280,6 @@
       arrow.style.transform = "rotate(180deg)";
     }
   }
-  </script>
-  
-  {% endblock %}
+</script>
+
+{% endblock %}
