--- a/templates/cv/cv_en.html
+++ b/templates/cv/cv_en.html
@@ -49,7 +49,7 @@
       English (Fluent)</p>
     </div>
   </div>
-</section><br>
+</section>
 
 <div class="collapsible-block">
   <h3 class="collapsible-toggle" onclick="toggleSection('references', this)">
@@ -63,7 +63,7 @@
       Phone: +33 6 89 17 16 44
     </section>
   </div>
-</div><br>
+</div>
 
 <div class="collapsible-block">
   <h3 class="collapsible-toggle" onclick="toggleSection('experiences', this)">
@@ -87,7 +87,7 @@
       <!-- existing education content -->
     </section>
   </div>
-</div>
+</div><br>
 
 <a href="/" class="btn">Back to home</a>
 
