--- a/static/css/style.css
+++ b/static/css/style.css
@@ -215,7 +215,6 @@ a {
   padding: 1rem;
   cursor: pointer;
   font-size: 1.5rem;
-  text-align: left;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -224,6 +223,12 @@ a {
   left: 50%;
   transform: translateX(-50%);
   margin: 0;
+  text-align: center; /* Ce seul text-align ne suffit pas pour flex */
+}
+
+.collapsible-toggle .collapsible-title {
+  flex: 1;
+  text-align: center;
 }
 
 /* Collapsible content */
