--- a/templates/cv/cv.html
+++ b/templates/cv/cv.html
@@ -13,8 +13,8 @@
   <h2>Compétences</h2>
 
   <div class="collapsible-block">
-    <h3 class="collapsible-toggle" onclick="toggleSection('data-science', this)">
-      Data Science
+    <h3 class="collapsible-toggle" onclick="toggleSection('questions-section', this)">
+      <span class="collapsible-title">Data Science</span>
       <span class="arrow-icon">▼</span>
     </h3>
     <div id="data-science" class="collapsible-content">
@@ -30,8 +30,8 @@
   </div>
 
   <div class="collapsible-block">
-    <h3 class="collapsible-toggle" onclick="toggleSection('ml-eng', this)">
-      Machine Learning Engineering
+    <h3 class="collapsible-toggle" onclick="toggleSection('questions-section', this)">
+      <span class="collapsible-title">Machine Learning Engineering</span>
       <span class="arrow-icon">▼</span>
     </h3>
     <div id="ml-eng" class="collapsible-content">
@@ -40,8 +40,8 @@
   </div>
 
   <div class="collapsible-block">
-    <h3 class="collapsible-toggle" onclick="toggleSection('langues', this)">
-      Langues
+    <h3 class="collapsible-toggle" onclick="toggleSection('questions-section', this)">
+      <span class="collapsible-title">Langues</span>
       <span class="arrow-icon">▼</span>
     </h3>
     <div id="langues" class="collapsible-content">
@@ -52,8 +52,8 @@
 </section>
 
 <div class="collapsible-block">
-  <h3 class="collapsible-toggle" onclick="toggleSection('references', this)">
-    Références
+  <h3 class="collapsible-toggle" onclick="toggleSection('questions-section', this)">
+    <span class="collapsible-title">Références</span>
     <span class="arrow-icon">▼</span>
   </h3>
   <div id="references" class="collapsible-content">
@@ -66,8 +66,8 @@
 </div>
 
 <div class="collapsible-block">
-  <h3 class="collapsible-toggle" onclick="toggleSection('experiences', this)">
-    Expériences professionnelles
+  <h3 class="collapsible-toggle" onclick="toggleSection('questions-section', this)">
+    <span class="collapsible-title">Expériences professionnelles</span>
     <span class="arrow-icon">▼</span>
   </h3>
   <div id="experiences" class="collapsible-content">
@@ -184,8 +184,8 @@
 </div>
 
 <div class="collapsible-block">
-  <h3 class="collapsible-toggle" onclick="toggleSection('formations', this)">
-    Formations
+  <h3 class="collapsible-toggle" onclick="toggleSection('questions-section', this)">
+    <span class="collapsible-title">Formations</span>
     <span class="arrow-icon">▼</span>
   </h3>
   <div id="formations" class="collapsible-content">
