--- a/templates/cv/cv_en.html
+++ b/templates/cv/cv_en.html
@@ -13,9 +13,9 @@
   <h2>Skills</h2>
 
   <div class="collapsible-block">
-    <h3 class="collapsible-toggle" onclick="toggleSection('data-science', this)">
-      Data Science
-      <span class="arrow-icon">▼</span>
+    <h3 class="collapsible-toggle" onclick="toggleSection('questions-section', this)">
+        <span class="collapsible-title">Data Science</span>
+        <span class="arrow-icon">▼</span>
     </h3>
     <div id="data-science" class="collapsible-content">
       <p><important-text>Languages & Frameworks</important-text><br>
@@ -30,9 +30,9 @@
   </div>
 
   <div class="collapsible-block">
-    <h3 class="collapsible-toggle" onclick="toggleSection('ml-eng', this)">
-      Machine Learning Engineering
-      <span class="arrow-icon">▼</span>
+    <h3 class="collapsible-toggle" onclick="toggleSection('questions-section', this)">
+        <span class="collapsible-title">Machine Learning Engineering</span>
+        <span class="arrow-icon">▼</span>
     </h3>
     <div id="ml-eng" class="collapsible-content">
       <p>PyCharm, Jira</p>
@@ -40,9 +40,9 @@
   </div>
 
   <div class="collapsible-block">
-    <h3 class="collapsible-toggle" onclick="toggleSection('languages', this)">
-      Languages
-      <span class="arrow-icon">▼</span>
+    <h3 class="collapsible-toggle" onclick="toggleSection('questions-section', this)">
+        <span class="collapsible-title">Languages</span>
+        <span class="arrow-icon">▼</span>
     </h3>
     <div id="languages" class="collapsible-content">
       <p>French (Native)<br>
@@ -52,10 +52,10 @@
 </section>
 
 <div class="collapsible-block">
-  <h3 class="collapsible-toggle" onclick="toggleSection('references', this)">
-    References
-    <span class="arrow-icon">▼</span>
-  </h3>
+    <h3 class="collapsible-toggle" onclick="toggleSection('questions-section', this)">
+        <span class="collapsible-title">References</span>
+        <span class="arrow-icon">▼</span>
+    </h3>
   <div id="references" class="collapsible-content">
     <section>
       <color-jade>Matthieu Compin</color-jade><br>
@@ -66,10 +66,10 @@
 </div>
 
 <div class="collapsible-block">
-  <h3 class="collapsible-toggle" onclick="toggleSection('experiences', this)">
-    Work Experience
-    <span class="arrow-icon">▼</span>
-  </h3>
+    <h3 class="collapsible-toggle" onclick="toggleSection('questions-section', this)">
+        <span class="collapsible-title">Work Experience</span>
+        <span class="arrow-icon">▼</span>
+    </h3>
   <div id="experiences" class="collapsible-content">
     <section class="experiences">
       <!-- existing experience content -->
@@ -78,10 +78,10 @@
 </div>
 
 <div class="collapsible-block">
-  <h3 class="collapsible-toggle" onclick="toggleSection('education', this)">
-    Education
-    <span class="arrow-icon">▼</span>
-  </h3>
+    <h3 class="collapsible-toggle" onclick="toggleSection('questions-section', this)">
+        <span class="collapsible-title">Education</span>
+        <span class="arrow-icon">▼</span>
+    </h3>
   <div id="education" class="collapsible-content">
     <section class="formations">
       <!-- existing education content -->
