--- a/static/css/style.css
+++ b/static/css/style.css
@@ -95,7 +95,7 @@ h1 {
   font-size: 3rem;
   margin: 0;
   text-align: center;
-  width: 100vw;
+  width: 100%;
   position: relative;
   left: 50%;
   right: 50%;
@@ -114,7 +114,7 @@ h3 {
   font-size: 1.8rem;
   margin: 0;
   text-align: center;
-  width: 100vw;
+  width: 100%;
   position: relative;
   left: 50%;
   transform: translateX(-50%);
@@ -218,7 +218,7 @@ a {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100vw;
+  width: 100%;
   position: relative;
   left: 50%;
   transform: translateX(-50%);
@@ -238,6 +238,11 @@ a {
   background-color: #f9f9f9;
   border-left: 5px solid var(--color-h3);
   animation: fadeIn 0.3s ease-in-out;
+}
+
+.collapsible-title {
+  flex-grow: 1;
+  text-align: center;
 }
 
 /* Arrow animation */
