--- a/templates/projects/heart_disease/heart_disease_en.html
+++ b/templates/projects/heart_disease/heart_disease_en.html
@@ -6,8 +6,8 @@
 
 <!-- Collapsible: Description -->
 <div class="collapsible-block">
-  <h3 class="collapsible-toggle" onclick="toggleSection('description-section', this)">
-    Description
+  <h3 class="collapsible-toggle" onclick="toggleSection('questions-section', this)">
+    <span class="collapsible-title">Description</span>
     <span class="arrow-icon">▼</span>
   </h3>
   <div id="description-section" class="collapsible-content">
@@ -26,7 +26,7 @@
 <!-- Collapsible: Questions -->
 <div class="collapsible-block">
   <h3 class="collapsible-toggle" onclick="toggleSection('questions-section', this)">
-    Questions
+    <span class="collapsible-title">Questions</span>
     <span class="arrow-icon">▼</span>
   </h3>
   <div id="questions-section" class="collapsible-content">
@@ -116,8 +116,8 @@
 
 <!-- Collapsible: PDF -->
 <div class="collapsible-block">
-  <h3 class="collapsible-toggle" onclick="toggleSection('pdf-section', this)">
-    Model Creation Steps
+  <h3 class="collapsible-toggle" onclick="toggleSection('questions-section', this)">
+    <span class="collapsible-title">Model Creation Steps</span>
     <span class="arrow-icon">▼</span>
   </h3>
   <div id="pdf-section" class="collapsible-content">
