--- a/templates/projects/heart_disease/heart_disease.html
+++ b/templates/projects/heart_disease/heart_disease.html
@@ -6,10 +6,10 @@
 
 <!-- Collapsible: Description -->
 <div class="collapsible-block">
-  <h3 class="collapsible-toggle" onclick="toggleSection('description-section', this)">
-    Description
+  <h3 class="collapsible-toggle" onclick="toggleSection('questions-section', this)">
+    <span class="collapsible-title">Description</span>
     <span class="arrow-icon">▼</span>
-  </h3>
+  </h3>  
   <div id="description-section" class="collapsible-content">
     <p>
       Projet personnel basé sur un jeu de données du CDC (US Centers for Disease Control and Prevention),
