--- a/templates/cv/cv_en.html
+++ b/templates/cv/cv_en.html
@@ -13,7 +13,7 @@
   <h2>Skills</h2>
 
   <div class="collapsible-block">
-    <h3 class="collapsible-toggle" onclick="toggleSection('questions-section', this)">
+    <h3 class="collapsible-toggle" onclick="toggleSection('data-science', this)">
         <span class="collapsible-title">Data Science</span>
         <span class="arrow-icon">▼</span>
     </h3>
@@ -30,7 +30,7 @@
   </div>
 
   <div class="collapsible-block">
-    <h3 class="collapsible-toggle" onclick="toggleSection('questions-section', this)">
+    <h3 class="collapsible-toggle" onclick="toggleSection('ml-eng', this)">
         <span class="collapsible-title">Machine Learning Engineering</span>
         <span class="arrow-icon">▼</span>
     </h3>
@@ -40,7 +40,7 @@
   </div>
 
   <div class="collapsible-block">
-    <h3 class="collapsible-toggle" onclick="toggleSection('questions-section', this)">
+    <h3 class="collapsible-toggle" onclick="toggleSection('languages', this)">
         <span class="collapsible-title">Languages</span>
         <span class="arrow-icon">▼</span>
     </h3>
@@ -52,7 +52,7 @@
 </section>
 
 <div class="collapsible-block">
-    <h3 class="collapsible-toggle" onclick="toggleSection('questions-section', this)">
+    <h3 class="collapsible-toggle" onclick="toggleSection('references', this)">
         <span class="collapsible-title">References</span>
         <span class="arrow-icon">▼</span>
     </h3>
@@ -66,7 +66,7 @@
 </div>
 
 <div class="collapsible-block">
-    <h3 class="collapsible-toggle" onclick="toggleSection('questions-section', this)">
+    <h3 class="collapsible-toggle" onclick="toggleSection('experiences', this)">
         <span class="collapsible-title">Work Experience</span>
         <span class="arrow-icon">▼</span>
     </h3>
@@ -78,7 +78,7 @@
 </div>
 
 <div class="collapsible-block">
-    <h3 class="collapsible-toggle" onclick="toggleSection('questions-section', this)">
+    <h3 class="collapsible-toggle" onclick="toggleSection('education', this)">
         <span class="collapsible-title">Education</span>
         <span class="arrow-icon">▼</span>
     </h3>
