--- a/templates/projects/heart_disease/heart_disease_en.html
+++ b/templates/projects/heart_disease/heart_disease_en.html
@@ -6,7 +6,7 @@
 
 <!-- Collapsible: Description -->
 <div class="collapsible-block">
-  <h3 class="collapsible-toggle" onclick="toggleSection('questions-section', this)">
+  <h3 class="collapsible-toggle" onclick="toggleSection('description-section', this)">
     <span class="collapsible-title">Description</span>
     <span class="arrow-icon">▼</span>
   </h3>
@@ -116,7 +116,7 @@
 
 <!-- Collapsible: PDF -->
 <div class="collapsible-block">
-  <h3 class="collapsible-toggle" onclick="toggleSection('questions-section', this)">
+  <h3 class="collapsible-toggle" onclick="toggleSection('pdf-section', this)">
     <span class="collapsible-title">Model Creation Steps</span>
     <span class="arrow-icon">▼</span>
   </h3>
