--- a/templates/cv/cv.html
+++ b/templates/cv/cv.html
@@ -13,7 +13,7 @@
   <h2>Compétences</h2>
 
   <div class="collapsible-block">
-    <h3 class="collapsible-toggle" onclick="toggleSection('questions-section', this)">
+    <h3 class="collapsible-toggle" onclick="toggleSection('data-science', this)">
       <span class="collapsible-title">Data Science</span>
       <span class="arrow-icon">▼</span>
     </h3>
@@ -30,7 +30,7 @@
   </div>
 
   <div class="collapsible-block">
-    <h3 class="collapsible-toggle" onclick="toggleSection('questions-section', this)">
+    <h3 class="collapsible-toggle" onclick="toggleSection('ml-eng', this)">
       <span class="collapsible-title">Machine Learning Engineering</span>
       <span class="arrow-icon">▼</span>
     </h3>
@@ -40,7 +40,7 @@
   </div>
 
   <div class="collapsible-block">
-    <h3 class="collapsible-toggle" onclick="toggleSection('questions-section', this)">
+    <h3 class="collapsible-toggle" onclick="toggleSection('languages', this)">
       <span class="collapsible-title">Langues</span>
       <span class="arrow-icon">▼</span>
     </h3>
@@ -52,7 +52,7 @@
 </section>
 
 <div class="collapsible-block">
-  <h3 class="collapsible-toggle" onclick="toggleSection('questions-section', this)">
+  <h3 class="collapsible-toggle" onclick="toggleSection('references', this)">
     <span class="collapsible-title">Références</span>
     <span class="arrow-icon">▼</span>
   </h3>
@@ -66,7 +66,7 @@
 </div>
 
 <div class="collapsible-block">
-  <h3 class="collapsible-toggle" onclick="toggleSection('questions-section', this)">
+  <h3 class="collapsible-toggle" onclick="toggleSection('experiences', this)">
     <span class="collapsible-title">Expériences professionnelles</span>
     <span class="arrow-icon">▼</span>
   </h3>
@@ -184,7 +184,7 @@
 </div>
 
 <div class="collapsible-block">
-  <h3 class="collapsible-toggle" onclick="toggleSection('questions-section', this)">
+  <h3 class="collapsible-toggle" onclick="toggleSection('formations', this)">
     <span class="collapsible-title">Formations</span>
     <span class="arrow-icon">▼</span>
   </h3>
